# virtu-mall

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-local.yml  docker-compose.yml  make_venv.sh  manage.py  pyproject.toml  pytest.ini  setup.cfg  swarm.yml  test_precommit_linter.py
.github/: CODEOWNERS  labels.yml
.github/configs/: .flake8  .mypy.ini
.github/workflows/: deploy.yml  labeler.yml  linter.yml  test-coverage.yml
apps/cart/: models.py  serializers.py  urls.py  views.py
apps/payment/: models.py  serializers.py  services.py  urls.py  views.py
apps/payment/models/: order.py  wallet.py
apps/product/: models.py  serializers.py  views.py
apps/search/: views.py
apps/user/: models.py  serializers.py  urls.py  views.py
apps/wallet/: models.py  serializers.py  urls.py  views.py
configs/: gunicorn.conf.py  nginx.conf
docker/: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.local  run_server.sh  run_server_local.sh
requirements/: requirements.test.txt  requirements.txt
src/: manage.py
src/apps/cart/: cart.py  models.py  serializers.py  urls.py  views.py
src/apps/cart/migrations/: 0001_initial.py  0002_alter_cart_product_alter_cart_quantity_and_more.py
src/apps/payment/: serializers.py  services.py  views.py
src/apps/payment/migrations/: 0001_initial.py  0002_order_order_created_25c9da_idx.py  0002_rename_amount_wallet_balance.py
src/apps/payment/models/: order.py  wallet.py
src/apps/product/: models.py  serializers.py  urls.py
src/apps/search/: urls.py  views.py
src/apps/user/: views.py
src/utils/: lookups.py  viewsets.py
src/virtumall/: urls.py  wsgi.py
src/virtumall/settings/: base.py  local.py  production.py
tests/: test_healthz.py  test_payment.py
utils/: asset_storage.py  message.py  middleware.py  permissions.py  viewsets.py
virtumall/: asgi.py  settings.py  urls.py  wsgi.py
virtumall/settings/: base.py  production.py
(+6 files in other folders)
