[tool.poetry]
name = "virtu-mall"
version = "0.1.0"
description = ""
authors = ["유수화 <dbtnghk528@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "4.2.7"
python-dotenv = "1.0.0"
djangorestframework = "3.14.0"
pytest-django = "4.5.2"
requests-mock = "1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
