[tool.isort]
force_single_line = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
# disallow_untyped_decorators = false
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
exclude = ["manage.py"]

[tool.pytest]
DJANGO_SETTINGS_MODULE = "virtumall.settings.development"

[tool.poetry]
name = "virtu-mall"
version = "0.1.0"
description = ""
authors = ["유수화 <dbtnghk528@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.7"
python-dotenv = "1.0.0"
djangorestframework = "3.14.0"
pytest-django = "4.5.2"
requests-mock = "1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
